add (incomplete) google maps api support

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
   <body>
     {{content-for 'body'}}
 
+    <script src="http://maps.googleapis.com/maps/api/js?v=3"></script>
+
     <script src="assets/vendor.js"></script>
     <script src="assets/venue-review.js"></script>
 
